--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,20 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
         <!-- Customize your theme here. -->
-    </style>
+            <item name="android:navigationBarColor">
+                @android:color/transparent
+            </item>
+
+            <!-- Optional: set to transparent if your app is drawing behind the status bar. -->
+            <item name="android:statusBarColor">
+                @android:color/transparent
+            </item>
+
+            <!-- Optional: set the status bar light and content dark. -->
+            <item name="android:windowLightStatusBar">
+                true
+            </item>
+        </style>
 </resources>
